Apply patch to add support for Falcon-512

--- a/configure.ac
+++ b/configure.ac
@@ -89,6 +89,7 @@ AC_CHECK_HEADERS([sys/random.h])
 
 PDNS_WITH_LIBSODIUM
 PDNS_WITH_LIBDECAF
+PDNS_WITH_FALCON
 PDNS_CHECK_LIBCRYPTO([
 ],[
    AC_MSG_ERROR([OpenSSL/libcrypto not found])
