--- a/pdns/recursordist/configure.ac
+++ b/pdns/recursordist/configure.ac
@@ -94,6 +94,7 @@ PDNS_CHECK_LIBCRYPTO_EDDSA
 PDNS_WITH_LIBSODIUM
 PDNS_WITH_LIBDECAF
 PDNS_WITH_LIBCAP
+PDNS_WITH_FALCON
 PDNS_CHECK_LIBCURL
 
 PDNS_WITH_NET_SNMP
