--- a/pdns/recursordist/configure.ac
+++ b/pdns/recursordist/configure.ac
@@ -95,6 +95,7 @@ PDNS_WITH_LIBSODIUM
 PDNS_WITH_LIBDECAF
 PDNS_WITH_LIBCAP
 PDNS_WITH_FALCON
+PDNS_WITH_SQISIGN
 PDNS_CHECK_LIBCURL
 
 PDNS_WITH_NET_SNMP
