--- a/configure.ac
+++ b/configure.ac
@@ -90,6 +90,7 @@ AC_CHECK_HEADERS([sys/random.h])
 PDNS_WITH_LIBSODIUM
 PDNS_WITH_LIBDECAF
 PDNS_WITH_FALCON
+PDNS_WITH_SQISIGN
 PDNS_CHECK_LIBCRYPTO([
 ],[
    AC_MSG_ERROR([OpenSSL/libcrypto not found])
